--- a/manifest.json
+++ b/manifest.json
@@ -4,24 +4,32 @@
   "description": "Blue Protocol: Star Resonance Checklist – track daily and weekly tasks or create custom ones with this responsive, offline-friendly, web-based checklist.",
   "start_url": "/",
   "display": "standalone",
+  "display_override": ["window-controls-overlay"],
   "background_color": "#242424",
   "theme_color": "#242424",
   "orientation": "any",
-  "categories": ["games", "productivity", "utilities"],
   "lang": "en",
+  "dir": "ltr",
+  "categories": ["games", "productivity", "utilities"],
+
   "icons": [
     {
       "src": "./icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "./icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
-  ]
+  ],
 
+  "edge_side_panel": {
+    "preferred_width": 380
+  },
+
+  "prefer_related_applications": false
 }
